<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- ImageView for Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pearls_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <!-- Name EditText -->
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/my_preference_name_hint"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

    <!-- Confirm Password EditText -->
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"
        android:layout_marginTop="16dp"/>

    <!-- Signup Button -->
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_text"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

    <!-- Login TextView -->
    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/blue"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"/>
</LinearLayout>
