<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pearls_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@id/logo"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_edittext_background"
        android:padding="12dp"/>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me_text"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_below="@id/cbRememberMe"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:textColor="@android:color/black"
        android:layout_below="@id/cbRememberMe"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:textColor="@color/blue"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"/>

    <!-- New Button for Continue as Guest -->
    <Button
        android:id="@+id/btnGuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue as Guest"
        android:layout_below="@id/tvSignup"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
